for wod assignment "Buzz's", DNF

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
 </body>
 
-<footer class="container-fluid py-3 bg-white ">
+<footer class="container-fluid mt-auto py-3 bg-white ">
     <div class="row container-fluid flex-column align-content-center fs-1">
         <div class="col-6 container-fluid row">
             <p class="col text-center">
